# ValleyFlow

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build-installer.ps1  download-model.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  autostart.rs  clipboard.rs  deepseek.rs  hotkey.rs  main.rs  sound.rs  transcription.rs  tray.rs
src/components/: HistoryWindow.tsx  RecordingOverlay.tsx  SettingsWindow.tsx  WelcomeWizard.tsx  index.ts
src/store/: index.tsx
