[package]
name = "valleyflow"
version = "1.0.0"
description = "Windows Desktop Voice Transcription App"
authors = ["ValleyFlow Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
hound = "3.5"
winreg = "0.52"
whisper-rs = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
arboard = "3.4"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
dirs = "5.0"
dotenvy = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
